Removing scroll bar from the body tag. Fixes white space #1701.

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -17,6 +17,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 #littlesis-scroll-wrapper {
